# retail_gravitation

./: .gitignore  Dockerfile  README.md  app.py  cities.json  docker-compose.yaml  pyproject.toml
cloud-terraform/: .terraform.lock.hcl  key  main.tf  output.tf  variables.tf
src/: cities.py  constants.py  crs.py  huff_gravity_model.py  main.py  obj_strg_tools.py  osm_get_data.sh  supply.py
