[tool.poetry]
name = "retail-gravitation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.2"
streamlit-folium = "^0.16.0"
geopandas = "^0.14.1"
python-dotenv = "^1.0.0"
s3fs = "^2023.10.0"
geolib = "^1.0.7"

[tool.poetry.group.dev.dependencies]
prefect = "^2.14.5"
matplotlib = "^3.8.2"
mapclassify = "^2.6.1"
ipykernel = "^6.26.0"
pyrosm = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
